Fixed spacing issue on small width screens

--- a/mission-ceramics/src/styles/Home.scss
+++ b/mission-ceramics/src/styles/Home.scss
@@ -340,7 +340,7 @@ span.home-step {
     font-size: 48px;
     line-height: 48px;
     width: 100px;
-    margin-right: 400px;
+    margin-right: 50vw;
   }
   .logo {
     width: 100px;
